--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
 
 </main>
 
-
+<footer>
+    <h4>Dirigirse a:<br>
+         <a href="./index2.html" target="_blank"> Ejercicio 2</a> <br>
+        <a href="./index3.html" target="_blank"> Ejercicio 3</a>
+    </h4>
+</footer>
    
-    
 </body>
 </html>
