--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <main>
 
-    
         <section>
     <H2>Datos personales</H2>
     <ul>
@@ -55,6 +54,7 @@
          <a href="./index2.html" target="_blank"> Ejercicio 2</a> <br>
         <a href="./index3.html" target="_blank"> Ejercicio 3</a>
     </h4>
+    <h4> Alumno:Enzo Ribodino</h4>
 </footer>
    
 </body>
